--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <div id="dynamic-field-1" class="form-group dynamic-field">
               <label for="field" class="font-weight-bold">Set Bell Time 1 </label>
-              <input type="time" id="field" class="form-control" name="field[]" step="1" />
+              <input type="time" id="field" class="form-control" name="field[]"/>
               <br>
               <!-- <label for="duration" class="font-weight-bold">Set Bell Duration (In Seconds) </label> -->
               <p class="font-weight-bold">Set Bell 1 Duration (In Seconds) </p>
